# crab.4

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  RESTORED_FEATURES_SUMMARY.md  build_v0.4.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_structure.py
Src/: BEACON_DATA_SUBMISSION_SYSTEM.md  BEACON_ID_IMPLEMENTATION_SUMMARY.md  BEACON_ID_SYSTEM.md  BUILD_OPTIMIZATION_README.md  BUILD_STATUS_SUMMARY.md  EVE_Log_Reader_enhanced.spec  GOOGLE_FORM_INTEGRATION_GUIDE.md  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  bounty_tracker.py  build.bat  build_anti_malware.bat  build_exe_optimized.bat  build_exe_optimized.ps1  build_ultra_anti_malware.bat  concord_tracker.py  config.py  eve_log_reader.py  eve_log_reader_refactored.py  google_form_config.json  log_monitor.py  requirements.txt  requirements_refactored.txt  run_eve_log_reader.bat  run_executable.bat  test_concord.py  test_crab.py  test_refactored.py  ui_theme.py  utils.py  version_info.txt  version_info_enhanced.txt  version_info_ultra_enhanced.txt
Src/test/: diagnose_google_form.py  test_add_bounty_entry.py  test_add_crab_bounty_entry.py  test_add_test_crab_bounty.py  test_apply_dark_theme.py  test_apply_filters.py  test_beacon_session.py  test_browse_directory.py  test_calculate_file_hash.py  test_check_for_changes.py  test_check_for_expired_but_recent_beacons.py  test_clear_display.py  test_clipboard_parsing.py  test_concord_countdown_expired.py  test_concord_countdown_loop.py  test_configure_google_form.py  test_copy_beacon_id.py  test_create_test_log.py  test_detect_concord_message.py  test_display_combined_logs.py  test_end_crab_failed.py  test_end_crab_session.py  test_end_crab_submit.py  test_exact_loot_format.py  test_export_beacon_sessions_to_text.py  test_export_bounties.py  test_export_logs.py  test_extract_bounty.py  test_extract_timestamp.py  test_find_beacon_end_timestamp.py  test_find_beacon_start_timestamp.py  test_find_eve_log_directory.py  test_framework.py  test_generate_beacon_hash.py  test_generate_beacon_id.py  test_get_active_eve_clients.py  test_get_file_modification_info.py  test_get_google_form_status.py  test_get_utc_now.py  test_google_form.py  (+48 more)
docs/: BEACON_DATA_SUBMISSION_SYSTEM.md  BEACON_ID_SYSTEM.md  GOOGLE_FORM_INTEGRATION_GUIDE.md  README.md
src/crab_tracker/: __init__.py  main.py
src/resources/: original_eve_log_reader.py
src/scripts/: build.py  build_anti_malware.bat  run.py  (+2 more)
tests/: __init__.py  test_time_utils.py
(+14 files in other folders)
